k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lab
  namespace: 20220415-nginx-lab
spec:
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: nginx-lab
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-lab-no-prefix
  namespace: 20220415-nginx-lab
spec:
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: nginx-lab-no-prefix
  type: ClusterIP
